--- a/_less/rtl.less
+++ b/_less/rtl.less
@@ -77,7 +77,7 @@ h2 .rssicon{
 .contributors{
 	text-align:right;
 }
-.contributors span{
+.contributors div{
 	direction:ltr;
 }
 .downloadbox div{
